[gd_scene load_steps=6 format=2]

[ext_resource path="res://Spaceship/Controller.gd" type="Script" id=1]
[ext_resource path="res://Spaceship/Spaceship.png" type="Texture" id=2]
[ext_resource path="res://Spaceship/RedFirepng.png" type="Texture" id=3]
[ext_resource path="res://Spaceship/PurpleFirepng.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.2514

[node name="SpaceShip" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="Controller" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Controller"]
visible = false
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="ShipSprite" type="Sprite" parent="Controller"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="FireExaustion" type="Node2D" parent="Controller"]
scale = Vector2( 3, 3 )

[node name="MainPurple" type="Sprite" parent="Controller/FireExaustion"]
visible = false
texture = ExtResource( 4 )

[node name="BackwardsPurple" type="Sprite" parent="Controller/FireExaustion"]
visible = false
position = Vector2( 0, -8.96 )
texture = ExtResource( 4 )
flip_v = true

[node name="LeftOrange" type="Sprite" parent="Controller/FireExaustion"]
visible = false
texture = ExtResource( 3 )

[node name="RightOrange" type="Sprite" parent="Controller/FireExaustion"]
visible = false
texture = ExtResource( 3 )
flip_h = true
